// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List editor Level component 1`] = `
<div>
  <ul
    style={
      Object {
        "listStyleType": "square",
      }
    }
  />
</div>
`;

exports[`List editor Level component ordered 1`] = `
<div>
  <ol
    style={
      Object {
        "listStyleType": "alpha",
      }
    }
  />
</div>
`;

exports[`List editor Line component 1`] = `
<div>
  <li />
</div>
`;

exports[`List editor Node component 1`] = `
<div
  className="text-chunk obojobo-draft--chunks--list pad"
>
  <button
    onClick={[Function]}
  >
    Swap to Ordered
  </button>
</div>
`;

exports[`List editor Node component toggles type 1`] = `"<div class=\\"text-chunk obojobo-draft--chunks--list pad\\"><button>Swap to Unordered</button></div>"`;

exports[`List editor Node component toggles type from unordered to ordered 1`] = `"<div class=\\"text-chunk obojobo-draft--chunks--list pad\\"><button>Swap to Ordered</button></div>"`;

exports[`List editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "listStyles": Object {
        "indents": Object {},
      },
      "textGroup": Array [
        Object {
          "text": Object {
            "value": "mockLine1",
          },
        },
        Object {
          "data": Object {
            "indent": 5,
          },
          "text": Object {
            "value": "mockLine1",
          },
        },
        Object {
          "text": Object {
            "value": "mockLine2",
          },
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "data": Object {
        "content": Object {
          "bulletStyle": "decimal",
          "type": undefined,
        },
      },
      "nodes": Array [
        Object {
          "nodes": Array [
            Object {
              "leaves": undefined,
              "object": "text",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Chunks.List.Line",
        },
        Object {
          "data": Object {
            "content": Object {
              "bulletStyle": "upper-alpha",
              "type": undefined,
            },
          },
          "nodes": Array [
            Object {
              "data": Object {
                "content": Object {
                  "bulletStyle": "upper-roman",
                  "type": undefined,
                },
              },
              "nodes": Array [
                Object {
                  "data": Object {
                    "content": Object {
                      "bulletStyle": "lower-alpha",
                      "type": undefined,
                    },
                  },
                  "nodes": Array [
                    Object {
                      "data": Object {
                        "content": Object {
                          "bulletStyle": "lower-roman",
                          "type": undefined,
                        },
                      },
                      "nodes": Array [
                        Object {
                          "data": Object {
                            "content": Object {
                              "bulletStyle": undefined,
                              "type": undefined,
                            },
                          },
                          "nodes": Array [
                            Object {
                              "nodes": Array [
                                Object {
                                  "leaves": undefined,
                                  "object": "text",
                                },
                              ],
                              "object": "block",
                              "type": "ObojoboDraft.Chunks.List.Line",
                            },
                          ],
                          "object": "block",
                          "type": "ObojoboDraft.Chunks.List.Level",
                        },
                      ],
                      "object": "block",
                      "type": "ObojoboDraft.Chunks.List.Level",
                    },
                  ],
                  "object": "block",
                  "type": "ObojoboDraft.Chunks.List.Level",
                },
              ],
              "object": "block",
              "type": "ObojoboDraft.Chunks.List.Level",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Chunks.List.Level",
        },
        Object {
          "nodes": Array [
            Object {
              "leaves": undefined,
              "object": "text",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Chunks.List.Line",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.List.Level",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`List editor oboToSlate converts an OboNode to a Slate node with a list style 1`] = `
Object {
  "data": Object {
    "content": Object {
      "listStyles": Object {
        "indents": Object {},
        "type": "unordered",
      },
      "textGroup": Array [
        Object {
          "text": Object {
            "value": "mockLine1",
          },
        },
        Object {
          "data": Object {
            "indent": 5,
          },
          "text": Object {
            "value": "mockLine1",
          },
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "data": Object {
        "content": Object {
          "bulletStyle": "disc",
          "type": "unordered",
        },
      },
      "nodes": Array [
        Object {
          "nodes": Array [
            Object {
              "leaves": undefined,
              "object": "text",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Chunks.List.Line",
        },
        Object {
          "data": Object {
            "content": Object {
              "bulletStyle": "circle",
              "type": "unordered",
            },
          },
          "nodes": Array [
            Object {
              "data": Object {
                "content": Object {
                  "bulletStyle": "square",
                  "type": "unordered",
                },
              },
              "nodes": Array [
                Object {
                  "data": Object {
                    "content": Object {
                      "bulletStyle": undefined,
                      "type": "unordered",
                    },
                  },
                  "nodes": Array [
                    Object {
                      "data": Object {
                        "content": Object {
                          "bulletStyle": undefined,
                          "type": "unordered",
                        },
                      },
                      "nodes": Array [
                        Object {
                          "data": Object {
                            "content": Object {
                              "bulletStyle": undefined,
                              "type": "unordered",
                            },
                          },
                          "nodes": Array [
                            Object {
                              "nodes": Array [
                                Object {
                                  "leaves": undefined,
                                  "object": "text",
                                },
                              ],
                              "object": "block",
                              "type": "ObojoboDraft.Chunks.List.Line",
                            },
                          ],
                          "object": "block",
                          "type": "ObojoboDraft.Chunks.List.Level",
                        },
                      ],
                      "object": "block",
                      "type": "ObojoboDraft.Chunks.List.Level",
                    },
                  ],
                  "object": "block",
                  "type": "ObojoboDraft.Chunks.List.Level",
                },
              ],
              "object": "block",
              "type": "ObojoboDraft.Chunks.List.Level",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Chunks.List.Level",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.List.Level",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`List editor plugins.renderNode renders a button when passed 1`] = `
<Node
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.List",
    }
  }
/>
`;

exports[`List editor plugins.renderNode renders a button when passed 2`] = `
<Level
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.List.Level",
    }
  }
/>
`;

exports[`List editor plugins.renderNode renders a button when passed 3`] = `
<Line
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.List.Line",
    }
  }
/>
`;

exports[`List editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "listStyles": Object {
      "indents": Array [
        Object {},
        Object {},
      ],
    },
    "textGroup": Array [
      Object {
        "data": Object {
          "indent": 0,
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockText",
        },
      },
      Object {
        "data": Object {
          "indent": 1,
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockText",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`List editor validateJSON fixes an incorrect Slate node 1`] = `
Object {
  "id": "mockKey",
  "nodes": Array [
    Object {
      "nodes": Array [
        "mockLine1",
      ],
      "type": "ObojoboDraft.Chunks.List.Level",
    },
    Object {
      "nodes": Array [
        "mockLine2",
      ],
      "type": "ObojoboDraft.Chunks.List.Line",
    },
    Object {
      "type": "ObojoboDraft.Chunks.List.Line",
    },
  ],
  "type": "mockType",
}
`;
